force-app/main/default/objects/AssetMgmt__c/fields/IA_Sup_Days_to_Expiry__c.field-meta.xml
<CustomField>
    <fullName>IA_Sup_Days_to_Expiry__c</fullName>
    <formula>IA_Sup_Expiry_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Days to Expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>