force-app/main/default/objects/AssetMgmt__c/fields/IA_Sup_Description_of_Support__c.field-meta.xml
<CustomField>
    <fullName>IA_Sup_Description_of_Support__c</fullName>
    <label>Description of Support</label>
    <type>TextArea</type>
</CustomField>