force-app/main/default/objects/AssetMgmt__c/fields/IA_Sup_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>IA_Sup_Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>