force-app/main/default/objects/AssetMgmt__c/fields/IA_Sup_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>IA_Sup_Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>