force-app/main/default/objects/AssetMgmt__c/fields/IA_Sup_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>IA_Sup_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>