force-app/main/default/objects/AssetMgmt__c/fields/IA_Supporting_Organisation__c.field-meta.xml
<CustomField>
    <fullName>IA_Supporting_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supporting Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>IA_Sup_Org</relationshipName>
    <type>Lookup</type>
</CustomField>