force-app/main/default/objects/AssetMgmt__c/fields/IA_Warranty__c.field-meta.xml
<CustomField>
    <fullName>IA_Warranty__c</fullName>
    <label>Warranty Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
            <value>
                <fullName>Third-Party</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>