force-app/main/default/objects/AssetMgmt__c/fields/IA_X3rd_Party_1__c.field-meta.xml
<CustomField>
    <fullName>IA_X3rd_Party_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Organisation 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CCS Assets (3rd Party Organisation 1)</relationshipLabel>
    <relationshipName>CCS_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>