force-app/main/default/objects/AssetMgmt__c/fields/IA_X3rd_Party_2_Involvement__c.field-meta.xml
<CustomField>
    <fullName>IA_X3rd_Party_2_Involvement__c</fullName>
    <label>Supplier Involvement 2</label>
    <type>TextArea</type>
</CustomField>