force-app/main/default/objects/AssetMgmt__c/fields/IA_X3rd_Supplier_Organisation_2__c.field-meta.xml
<CustomField>
    <fullName>IA_X3rd_Supplier_Organisation_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Organisation 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CCS Assets (Supplier Organisation 2)</relationshipLabel>
    <relationshipName>CCS_Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>