force-app/main/default/objects/AssetMgmt__c/fields/IA_X3rd_X3rd_Party_3__c.field-meta.xml
<CustomField>
    <fullName>IA_X3rd_X3rd_Party_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Organisation 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CCS Assets (Supplier Organisation 3)</relationshipLabel>
    <relationshipName>CCS_Assets2</relationshipName>
    <type>Lookup</type>
</CustomField>