force-app/main/default/objects/AssetMgmt__c/fields/PIA_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>PIA_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Privacy Impact Assessment</description>
    <inlineHelpText>Privacy Impact Assessment</inlineHelpText>
    <label>PIA Review Required</label>
    <type>Checkbox</type>
</CustomField>