force-app/main/default/objects/AssetMgmt__c/fields/Supporting_Or__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Or__c</fullName>
    <formula>IA_Contract__r.Supplier__r.Name</formula>
    <label>Supporting Organisation</label>
    <type>Text</type>
</CustomField>