force-app/main/default/objects/AssetMgmt__c/recordTypes/Asset_Record.recordType-meta.xml
<RecordType>
    <fullName>Asset_Record</fullName>
    <active>true</active>
    <description>This record type is used for both Hardware and Software Assets</description>
    <label>Default Asset</label>
</RecordType>