force-app/main/default/objects/AssetMgmt__c/recordTypes/Cloud_Asset.recordType-meta.xml
<RecordType>
    <fullName>Cloud_Asset</fullName>
    <active>true</active>
    <description>This record type is used for Cloud assets only</description>
    <label>Cloud Asset</label>
</RecordType>