force-app/main/default/objects/AssetMgmt__c/recordTypes/Hardware_Asset.recordType-meta.xml
<RecordType>
    <fullName>Hardware_Asset</fullName>
    <active>true</active>
    <description>This record type is used for Hardware Asset only</description>
    <label>Hardware Asset</label>
</RecordType>