force-app/main/default/objects/AssetMgmt__c/recordTypes/Software_Asset.recordType-meta.xml
<RecordType>
    <fullName>Software_Asset</fullName>
    <active>true</active>
    <description>This record type is used for Software Asset only</description>
    <label>Software Asset</label>
</RecordType>