force-app/main/default/objects/AssetMgmt__c/validationRules/Cyber_Essentials.validationRule-meta.xml
<ValidationRule>
    <fullName>Cyber_Essentials</fullName>
    <active>true</active>
    <errorConditionFormula>IA_Gov_Cyber_Essentials__c  = True &amp;&amp; ISBLANK( IA_Gov_Cyber_Essentials_Certificate__c)</errorConditionFormula>
    <errorDisplayField>IA_Gov_Cyber_Essentials_Certificate__c</errorDisplayField>
    <errorMessage>Please specify a Cyber Essentials certificate number for this asset.</errorMessage>
</ValidationRule>