force-app/main/default/objects/AssetMgmt__c/validationRules/ISO2700_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>ISO2700_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IA_Gov_ISO27001__c = True &amp;&amp; ISBLANK( IA_Gov_ISO27001_Certificate__c)</errorConditionFormula>
    <errorDisplayField>IA_Gov_ISO27001_Certificate__c</errorDisplayField>
    <errorMessage>Please specify an ISO2700 certificate number for this asset.</errorMessage>
</ValidationRule>