force-app/main/default/objects/AssetMgmt__c/validationRules/Lease_Check_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Lease_Check_Start_Date</fullName>
    <active>true</active>
    <description>Check to ensure Lease information has been completed.</description>
    <errorConditionFormula>IA_Leased__c = True &amp;&amp;  ISBLANK(IA_Lease_Start_Date__c)</errorConditionFormula>
    <errorDisplayField>IA_Lease_Start_Date__c</errorDisplayField>
    <errorMessage>You have indicated that this asset is leased. Please enter a Lease Start Date</errorMessage>
</ValidationRule>