force-app/main/default/objects/AssetMgmt__c/listViews/Expiring_Assets.listView-meta.xml
<ListView>
    <fullName>Expiring_Assets</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>IA_Gov_Service__c</columns>
    <columns>IA_Gov_Business_Area__c</columns>
    <columns>IA_Sup_Days_to_Expiry__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IA_Sup_Days_to_Expiry__c</field>
        <operation>lessThan</operation>
        <value>30</value>
    </filters>
    <label>Expiring Assets</label>
</ListView>