force-app/main/default/objects/AssetMgmt__c/listViews/Firewalls.listView-meta.xml
<ListView>
    <fullName>Firewalls</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>IA_Gov_Service__c</columns>
    <columns>IA_Hard_SN__c</columns>
    <columns>IA_Hard_Make__c</columns>
    <columns>IA_Hard_Model__c</columns>
    <columns>IA_Gov_Business_Area__c</columns>
    <columns>IA_Location__c</columns>
    <columns>IA_Status__c</columns>
    <columns>IA_Main_User__c</columns>
    <columns>Supporting_Or__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>IA_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IA_Hardware_Type__c</field>
        <operation>equals</operation>
        <value>Firewall</value>
    </filters>
    <label>Firewalls</label>
    <sharedTo>
        <group>RFC_Apps_Infrastructure</group>
    </sharedTo>
</ListView>